Issue #2976248 by bandanasharma, rahulrasgon, Neetika K, Sreenivas Bttv: Advanced Search:The alignment of checkbox not consistent with above fields

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -3,7 +3,7 @@ textarea {
   border: 1px solid $gray-400;
 }
 
-.editor-image-dialog {
+form {
   .form-check-input {
     margin-left: 0;
     position: inherit;
